
	* printer/HP-DeskJet_450.xml, printer/HP-Business_Inkjet_2200.xml,
	  printer/HP-Business_Inkjet_2230.xml,
	  printer/HP-Business_Inkjet_2250.xml,
	  printer/HP-Business_Inkjet_2250TN.xml,
	  printer/HP-Business_Inkjet_2280.xml, printer/HP-2500C.xml,
	  printer/HP-2000C.xml, printer/HP-DesignJet_ColorPro_CAD.xml:
	  Updated text for printers without paper type sensor.

2003-05-19  David Suffield <david.suffield@hp.com>

	* printer/HP-PSC_1200.xml, HP-PSC_1110.xml, HP-PSC_1100.xml,
	  HP-OfficeJet_6105.xml, HP-OfficeJet_5105.xml,
	  HP-DeskJet_9300.xml HP-OfficeJet_5110.xml,
	  HP-OfficeJet_5110xi.xml, HP-OfficeJet_6110.xml HP-PSC_1205.xml,
	  HP-PSC_1210.xml: Added/updated HP PSC 1100 series, PSC 1200,
	  Deskjet 9300, Officejet 5100 series and Officejet 6100 series.

2003-05-18  Till Kamppeter <till.kamppeter@gmx.net>

	* opt/lm1100-Brightness.xml: Set default brightness of Lexmark
	  1100 to 100, 255 is too high.

2003-05-15  Tim Waugh  <twaugh@redhat.com>

	* db/source/printer/HP-DeskJet_5550.xml: Added Device ID
	  information.

2003-05-09  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Lots of small corrections.

2003-05-07  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_1005.xml, printer/HP-LaserJet_1150.xml,
	  printer/HP-Color_LaserJet_1500.xml, driver/ljet4.xml,
	  driver/lj4dith.xml, driver/foo2zjs.xml, driver/pbmtozjs.xml,
	  opt/127.xml, opt/87.xml, opt/88.xml, opt/89.xml, opt/90.xml,
	  opt/92.xml, opt/93.xml, opt/foo2zjs-ColorMode.xml,
	  opt/foo2zjs-PrinterType.xml, opt/foo2zjs-Resolution.xml,
	  opt/foo2zjs-ICM.xml: Added the HP LaserJet 1005, 1150, and Color
	  LaserJet 1500.

	* printer/Generic-PCL_5_5e_Printer.xml,
	  printer/Generic-PCL_5e_Printer.xml,
	  printer/Generic-PCL_5_Printer.xml, driver/ljet4.xml,
	  driver/ljet4d.xml, driver/lj4dith.xml, driver/ljet3.xml,
	  driver/ljet3d.xml, db/oldprinterids: Made two separate entries
	  out of the Generic PCL 5/5e printer: PCL 5 is