@@ -73,7 +73,9 @@
     photo mode where the image is rendered in 1200 dpi and
     interpolated to 4800x1200 dpi by the hardware.&lt;p&gt;
 
-    Full-Bleed printing is supported with &quot;hpijs&quot;.&lt;p&gt;
+    Border-less (full bleed) printing on paper sizes up to
+    Oufuku-Hagaki is supported with the &quot;hpijs&quot;
+    driver.&lt;p&gt;
 
     Up/downloading of photos between the PC and the printer/memory
     card works with the &lt;a
@@ -83,3 +85,4 @@
     </en>
   </comments>
 </printer>
+
