@@ -58,7 +58,9 @@
     dpi and interpolated to 4800x1200 dpi by the hardware, without
     paper detection, intended for photo paper only.&lt;p&gt;
 
-    Full-Bleed printing is supported with &quot;hpijs&quot;.&lt;p&gt;
+    Border-less (full bleed) printing on paper sizes up to
+    Oufuku-Hagaki is supported with the &quot;hpijs&quot;
+    driver.&lt;p&gt;
 
     The duplex unit does not work with GIMP-Print, use
     &quot;hpijs&quot;, &quot;cdj970&quot; or &quot;pcl3&quot; instead.
@@ -66,3 +68,4 @@
     </en>
   </comments>
 </printer>
+
