@@ -63,7 +63,9 @@
     dpi and interpolated to 4800x1200 dpi by the hardware, without
     paper detection, intended for photo paper only.&lt;p&gt;
 
-    Full-Bleed printing is supported with &quot;hpijs&quot;.&lt;p&gt;
+    Border-less (full bleed) printing on paper sizes up to
+    Oufuku-Hagaki is supported with the &quot;hpijs&quot;
+    driver.&lt;p&gt;
 
     Scanning works using the &lt;a
     href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
@@ -81,4 +83,5 @@
     </en>
   </comments>
 </printer>
+
 
