@@ -60,7 +60,9 @@
     interpolated to 4800x1200 dpi by the hardware, intended for photo
     paper.&lt;p&gt;
 
-    Full-Bleed printing is supported with &quot;hpijs&quot;.&lt;p&gt;
+    Border-less (full bleed) printing on paper sizes up to
+    Oufuku-Hagaki is supported with the &quot;hpijs&quot;
+    driver.&lt;p&gt;
 
     Scanning works using the &lt;a
     href=&quot;http://hpoj.sourceforge.net/&quot;&gt;HPOJ&lt;/a&gt;
@@ -71,4 +73,5 @@
     </en>
   </comments>
 </printer>
+
 
