@@ -52,7 +52,9 @@
     It has a USB port on its front side to directly connect a digital
     camera (HP only).&lt;p&gt;
 
-    Full-Bleed printing is supported with &quot;hpijs&quot;.&lt;p&gt;
+    Border-less (full bleed) printing on paper sizes up to
+    Oufuku-Hagaki is supported with the &quot;hpijs&quot;
+    driver.&lt;p&gt;
 
     Best output quality reachable with the &quot;hpijs&quot; driver
     (printer compatible to HP DeskJet 990C), especially the 1200-dpi
@@ -86,4 +88,5 @@
     </en>
   </comments>
 </printer>
+
 
