@@ -8,6 +8,14 @@
 	  printer/HP-2000C.xml, printer/HP-DesignJet_ColorPro_CAD.xml:
 	  Updated text for printers without paper type sensor.
 
+	* printer/HP-DeskJet_450.xml, printer/HP-DeskJet_5550.xml,
+	  printer/HP-DeskJet_5551.xml, printer/HP-OfficeJet_6105.xml,
+	  printer/HP-OfficeJet_6110.xml, printer/HP-PhotoSmart_7345.xml,
+	  printer/HP-PhotoSmart_7350.xml, printer/HP-PhotoSmart_7550.xml,
+	  printer/HP-PSC_2110.xml, printer/HP-PSC_2150.xml,
+	  printer/HP-PSC_2210.xml: Added remark that full-bleed only works
+	  on Oufuku-Hagaki and smaller paper sizes.
+	
 2003-05-19  David Suffield <david.suffield@hp.com>
 
 	* printer/HP-PSC_1200.xml, HP-PSC_1110.xml, HP-PSC_1100.xml,
